Fix overstretching node table (pool page)

--- a/frontend/src/app/components/pool/pool-nodes-table/pool-nodes-table.less
+++ b/frontend/src/app/components/pool/pool-nodes-table/pool-nodes-table.less
@@ -8,12 +8,14 @@ pool-nodes-table {
         top : 4em;
     }
 
-    .state-col {
+    .data-table .state-col {
         min-width: 4em;
+/*        padding-left: 0;
+        padding-right: 0*/;
     }
 
-    .disk-read-col {
-        min-width: 7em;
+    .disk-read-write-col {
+        min-width: 9em;
     }
 
     .disk-write-col {
@@ -21,7 +23,7 @@ pool-nodes-table {
     }
 
     .rtt-col {
-        min-width: 7em;
+        min-width: 3em;
     }
 
     .name-col {
